frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"labels":{"app":"spds-frontend"},"name":"spds-frontend","namespace":"smartpds"},"spec":{"progressDeadlineSeconds":600,"replicas":1,"revisionHistoryLimit":10,"selector":{"matchLabels":{"app":"spds-frontend"}},"strategy":{"rollingUpdate":{"maxSurge":"25%","maxUnavailable":0},"type":"RollingUpdate"},"template":{"metadata":{"labels":{"app":"spds-frontend"}},"spec":{"affinity":{"podAntiAffinity":{"preferredDuringScheduling [...]
  creationTimestamp: "2025-03-23T11:30:21Z"
  generation: 1
  labels:
    app: spds-frontend
  name: spds-frontend
  namespace: smartpds
  resourceVersion: "143300"
  uid: 6eee01bf-67d1-417d-a280-9440c58ea952
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: spds-frontend
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: spds-frontend
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchLabels:
                  app: spds-frontend
              topologyKey: kubernetes.io/hostname
            weight: 100
      containers:
      - env:
        - name: SERVER_CONTEXT_PATH
          value: spds-frontend
        - name: JAVA_OPTS
          value: -Xmx384m -Xms256m
        image: svchaudhari/spds-frontend:0.0.0-manual-Dev-41
        imagePullPolicy: IfNotPresent
        lifecycle:
          preStop:
            exec:
              command:
              - sh
              - -c
              - sleep 10
        name: spds-frontend
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
        resources:
          limits:
            cpu: 500m
            memory: 512Mi
          requests:
            cpu: 250m
            memory: 256Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2025-03-23T11:30:21Z"
    lastUpdateTime: "2025-03-23T11:30:27Z"
    message: ReplicaSet "spds-frontend-56689b5bf" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  - lastTransitionTime: "2025-03-24T04:05:57Z"
    lastUpdateTime: "2025-03-24T04:05:57Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  observedGeneration: 1
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
