frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"cert-manager.io/cluster-issuer":"letsencrypt-prod","kubernetes.io/ingress.class":"nginx","nginx.ingress.kubernetes.io/force-ssl-redirect":"false","nginx.ingress.kubernetes.io/ssl-redirect":"false"},"name":"spds-frontend","namespace":"smartpds"},"spec":{"ingressClassName":"nginx","rules":[{"host":"ap.allhpudd.com","http":{"paths":[{"backend":{"service":{"name":"spds-frontend","port":{"number":80}}},"path":"/", [...]
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  creationTimestamp: "2025-03-23T11:37:33Z"
  generation: 1
  name: spds-frontend
  namespace: smartpds
  resourceVersion: "39296"
  uid: 26a4559f-9962-4249-b784-51a895520272
spec:
  ingressClassName: nginx
  rules:
  - host: ap.allhpudd.com
    http:
      paths:
      - backend:
          service:
            name: spds-frontend
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - ap.allhpudd.com
    secretName: ap.allhpudd.com-tls
status:
  loadBalancer: {}
